[gd_scene load_steps=5 format=2]

[ext_resource path="res://PlayerSpriteFrames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 4.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerHitBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerAnimations" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle_g"
frame = 3
speed_scale = 1.3
playing = true
offset = Vector2( 1, -7 )

[node name="Timer" type="Timer" parent="."]

[node name="HitTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
